ci: modify nohup/docker/k8s files

--- a/ci/docker/Dockerfile
+++ b/ci/docker/Dockerfile
@@ -2,6 +2,6 @@ FROM golang
 MAINTAINER LotteWong <lottewong21@gmail.com>
 
 WORKDIR /go/src/app
-COPY .. .
+COPY . .
 
-CMD ./bin/giotto_gateway_admin -config ./config/prod/
+CMD ./bin/giotto_gateway_admin -config ./configs/prod/
