--- a/ci/k8s/admin.yaml
+++ b/ci/k8s/admin.yaml
@@ -1,5 +1,5 @@
 # deploy config
-apiVersion: deploy/v1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: giotto-gateway-admin
@@ -15,14 +15,16 @@ spec:
     spec:
       containers:
         - name: giotto-gateway-admin
-          image: giotto-gateway-admin:d1785da
+          image: giotto-gateway-admin:84c9838
           imagePullPolicy: Never
           ports:
             - containerPort: 8880
 ---
 # service config
-apiVersion: service/v1
+apiVersion: v1
 kind: Service
+metadata:
+  name: giotto-gateway-admin
 spec:
   ports:
     - port: 8880
